--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ springdoc.swagger-ui.path=/swagger-ui
 
 # PostgreSQL Database Configuration
 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
 # Database connection URL
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/aromatica}
 spring.datasource.username={{DB_USERNAME}}
