--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,4 @@ spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
 jwt.access.secret.key={{ACCESS_SECRET}}
+jwt.internal.review.secret.key={{INTERNAL_REVIEW_SECRET}}
